[MBL-19241][Teacher] SpeedGrader - Add differentiation tags based filter to submissions list (#3652)
refs: MBL-19241
builds: Teacher
affects: Teacher
release note: Added differentiation tags filtering to submissions list.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -15104,6 +15104,9 @@
         }
       }
     },
+    "Differentiation Tags" : {
+
+    },
     "Dismiss" : {
       "localizations" : {
         "ar" : {
@@ -50327,6 +50330,9 @@
           }
         }
       }
+    },
+    "Students without Differentiation tags" : {
+
     },
     "Submission Filter" : {
       "extractionState" : "stale",
