--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -47705,6 +47705,7 @@
       }
     },
     "Due" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -81301,6 +81302,7 @@
     },
     "No Due Date" : {
       "comment" : "Label shown for a to do that doesn't have a due date",
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
