--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -20664,7 +20664,7 @@
         "is" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Safn"
+            "value" : "Setja í safn"
           }
         },
         "it" : {
