Unify to-do texts
refs: MBL-19370
builds: Teacher, Student
affects: Teacher, Student
release note: none

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -130956,6 +130956,7 @@
     },
     "To Do" : {
       "comment" : "Tab title, max character count is 14",
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -131210,6 +131211,9 @@
           }
         }
       }
+    },
+    "To-do" : {
+      "comment" : "Tab title, max character count is 14"
     },
     "To:" : {
       "extractionState" : "manual",
