--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -23311,6 +23311,9 @@
     "Course: %@. " : {
 
     },
+    "Courses are loading" : {
+
+    },
     "Create message" : {
       "localizations" : {
         "ar" : {
