chore: update a11y strings

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -24068,9 +24068,6 @@
     "Congrats! You’ve completed your course. View your progress and scores on the Learn page." : {
 
     },
-    "Continue learning" : {
-
-    },
     "Conversation" : {
       "localizations" : {
         "ar" : {
@@ -26640,13 +26637,13 @@
         }
       }
     },
-    "Double tap to continue learning" : {
-
-    },
     "Double tap to load more notifications" : {
 
     },
     "Double tap to open course" : {
+
+    },
+    "Double tap to open learning object" : {
 
     },
     "Double tap to open skillspace" : {
@@ -58937,6 +58934,12 @@
         }
       }
     },
+    "Open %@" : {
+
+    },
+    "Open course" : {
+
+    },
     "Open in a New Tab" : {
       "localizations" : {
         "ar" : {
@@ -59192,6 +59195,9 @@
           }
         }
       }
+    },
+    "Open learning learning object" : {
+
     },
     "Optional" : {
       "localizations" : {
@@ -86384,12 +86390,6 @@
           }
         }
       }
-    },
-    "View %@" : {
-
-    },
-    "View course" : {
-
     },
     "View submission" : {
       "localizations" : {
