--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -59219,7 +59219,7 @@
         }
       }
     },
-    "Open learning learning object" : {
+    "Open learning object" : {
 
     },
     "Optional" : {
