--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -9377,7 +9377,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "%tU 日"
+            "value" : "%tu日"
           }
         },
         "mi" : {
